k8s/backend-service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: settl-backend-svc
spec:
  selector:
    app: settl-backend
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: settl-backend-route
spec:
  to:
    kind: Service
    name: settl-backend-svc
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
